[gd_scene load_steps=23 format=2]

[ext_resource path="res://addons/MasonryTool/UI/icons/Save.svg" type="Texture" id=1]
[ext_resource path="res://addons/MasonryTool/UI/TransButton.gd" type="Script" id=2]
[ext_resource path="res://addons/MasonryTool/UI/MasonryToolPanel.gd" type="Script" id=3]
[ext_resource path="res://addons/MasonryTool/UI/PartMode.gd" type="Script" id=4]
[ext_resource path="res://addons/ToolCore/UI/AnimatedTextureRect.gd" type="Script" id=5]
[ext_resource path="res://addons/MasonryTool/UI/icons/GuiVisibilityHidden.svg" type="Texture" id=6]
[ext_resource path="res://addons/MasonryTool/UI/icons/Load.svg" type="Texture" id=7]
[ext_resource path="res://addons/MasonryTool/UI/icons/GuiVisibilityVisible.svg" type="Texture" id=8]
[ext_resource path="res://addons/MasonryTool/UI/PartSelection.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/ToolCore/UI/icons/build_line.png" type="Texture" id=10]
[ext_resource path="res://addons/ToolCore/UI/icons/build_single.png" type="Texture" id=11]
[ext_resource path="res://addons/ToolCore/UI/BuildMode.gd" type="Script" id=12]

[sub_resource type="InputEventKey" id=1]
alt = true
pressed = true
scancode = 49

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventKey" id=3]
alt = true
pressed = true
scancode = 50

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventKey" id=5]
alt = true
pressed = true
scancode = 51

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventKey" id=7]
alt = true
pressed = true
scancode = 52

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="ButtonGroup" id=9]

[sub_resource type="AnimatedTexture" id=10]
flags = 4
frames = 2
pause = true
frame_0/texture = ExtResource( 11 )
frame_1/texture = ExtResource( 10 )
frame_1/delay_sec = 0.0

[node name="VBoxContainer" type="VBoxContainer"]
anchor_bottom = 1.0
margin_right = 200.0
custom_constants/separation = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
shortcut_build = SubResource( 2 )
shortcut_paint = SubResource( 4 )
shortcut_floor = SubResource( 6 )
shortcut_wall = SubResource( 8 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_right = 200.0
margin_bottom = 4.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 12.0
margin_right = 200.0
margin_bottom = 28.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HBoxContainer2"]
margin_right = 8.0
margin_bottom = 16.0
custom_constants/separation = 8

[node name="VisibilityButton" type="TextureButton" parent="HBoxContainer2"]
visible = false
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
size_flags_vertical = 5
toggle_mode = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )

[node name="SaveButton" type="TextureButton" parent="HBoxContainer2"]
visible = false
modulate = Color( 1, 1, 1, 0.8 )
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
size_flags_vertical = 5
texture_normal = ExtResource( 1 )
script = ExtResource( 2 )
transparency_adjustment = true

[node name="LoadButton" type="TextureButton" parent="HBoxContainer2"]
modulate = Color( 1, 1, 1, 0.8 )
margin_left = 16.0
margin_right = 32.0
margin_bottom = 16.0
size_flags_vertical = 5
texture_normal = ExtResource( 7 )
script = ExtResource( 2 )
transparency_adjustment = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer2"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 16.0
custom_constants/separation = 8

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 50.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="HBoxContainer3"]
margin_right = 8.0
margin_bottom = 14.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="HBoxContainer3"]
margin_left = 16.0
margin_right = 184.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Masonry Editor"

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer3"]
margin_left = 192.0
margin_right = 200.0
margin_bottom = 14.0
custom_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 58.0
margin_right = 200.0
margin_bottom = 62.0

[node name="ToolMode" type="TabContainer" parent="."]
margin_top = 70.0
margin_right = 200.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 160 )

[node name="Build" type="Tabs" parent="ToolMode"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="ToolMode/Build"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ToolMode/Build/VBoxContainer"]
margin_right = 192.0
margin_bottom = 31.0
text = "LMB: Build
LMB+Shift: Demolish"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ToolMode/Build/VBoxContainer"]
margin_top = 35.0
margin_right = 192.0
margin_bottom = 99.0
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMode" type="VBoxContainer" parent="ToolMode/Build/VBoxContainer/HBoxContainer"]
margin_right = 112.0
margin_bottom = 64.0
size_flags_horizontal = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Single" type="CheckBox" parent="ToolMode/Build/VBoxContainer/HBoxContainer/BuildMode"]
margin_right = 112.0
margin_bottom = 24.0
pressed = true
group = SubResource( 9 )
text = "Single"

[node name="Line" type="CheckBox" parent="ToolMode/Build/VBoxContainer/HBoxContainer/BuildMode"]
margin_top = 28.0
margin_right = 112.0
margin_bottom = 52.0
group = SubResource( 9 )
text = "Line"

[node name="TextureRect" type="TextureRect" parent="ToolMode/Build/VBoxContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 64.0
texture = SubResource( 10 )
stretch_mode = 4
script = ExtResource( 5 )

[node name="Paint" type="Tabs" parent="ToolMode"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Label" type="Label" parent="ToolMode/Paint"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "LMB: Paint
LMB+Shift: Pick"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartMode" type="TabContainer" parent="."]
margin_top = 238.0
margin_right = 200.0
margin_bottom = 548.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 3
script = ExtResource( 4 )

[node name="Floor" parent="PartMode" instance=ExtResource( 9 )]
default_path = "res://demo_assets/floor/"
preview_size = Vector2( 64, 64 )

[node name="Wall" parent="PartMode" instance=ExtResource( 9 )]
visible = false
default_path = "res://demo_assets/wall/"
preview_size = Vector2( 64, 64 )

[node name="HSeparator3" type="HSeparator" parent="."]
margin_top = 556.0
margin_right = 200.0
margin_bottom = 560.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 568.0
margin_right = 200.0
margin_bottom = 588.0
alignment = 1

[node name="GenerateButton" type="Button" parent="HBoxContainer"]
margin_left = 30.0
margin_right = 169.0
margin_bottom = 20.0
text = "Generate Geometry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator4" type="HSeparator" parent="."]
margin_top = 596.0
margin_right = 200.0
margin_bottom = 600.0
[connection signal="ready" from="." to="PartMode/Floor" method="generate_item_list"]
[connection signal="ready" from="." to="PartMode/Wall" method="generate_item_list"]
[connection signal="mode_selected" from="ToolMode/Build/VBoxContainer/HBoxContainer/BuildMode" to="ToolMode/Build/VBoxContainer/HBoxContainer/TextureRect" method="set_frame"]
